<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbartwitter"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:title="Twitter Videos Saver" />
            </com.google.android.material.appbar.AppBarLayout>

            <RelativeLayout
                android:id="@+id/RLEdittextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_below="@id/appBarLayout3"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle_white"
                android:elevation="3dp">

                <EditText
                    android:id="@+id/et_text"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/et_back"
                    android:hint="@string/paste_link"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="15sp" />

                <LinearLayout
                    android:id="@+id/RLDownloadLayout"
                    android:layout_below="@+id/et_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/login_btn1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/et_back"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:padding="14dp"
                        android:text="@string/download"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/download_txt_size" />

                    <TextView
                        android:id="@+id/tv_paste"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/et_back"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:padding="14dp"
                        android:text="@string/paste"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/paste_txt_size" />

                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <com.startapp.sdk.ads.banner.Mrec
            android:id="@+id/startAppMrectwitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative2"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="visible" />
    </RelativeLayout>
</layout>
