<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/RLTopLayout"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:visibility="visible">

                    <com.google.android.material.appbar.AppBarLayout
                        android:id="@+id/appBarLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:theme="@style/AppTheme.AppBarOverlay"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.Toolbar
                            android:id="@+id/toolbarabout"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            app:popupTheme="@style/AppTheme.PopupOverlay"
                            app:title="About Us" />
                    </com.google.android.material.appbar.AppBarLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                       android:layout_below="@+id/appBarLayout"
                        android:layout_height="200dp">

                        <RelativeLayout
                            android:id="@+id/LLOpenInstagram"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:background="@drawable/rectangle_white">

                            <ImageView
                                android:id="@+id/IMIcon"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/logo" />

                            <TextView
                                android:id="@+id/TVTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/IMIcon"
                                android:layout_centerHorizontal="true"
                                android:text="@string/app_name"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>
                    </RelativeLayout>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/lnr_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/RLTopLayout"
                    android:layout_marginTop="-30dp"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp">

                    <RelativeLayout
                        android:id="@+id/RLEmail"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/rectangle_white"
                        android:elevation="3dp">

                        <ImageView
                            android:id="@+id/imEmail"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/circle"
                            android:padding="12dp"
                            android:src="@drawable/ic_mail" />

                        <ImageView
                            android:id="@+id/imArrow4"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_arrow" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="10dp"
                            android:layout_toLeftOf="@+id/imArrow4"
                            android:layout_toRightOf="@+id/imEmail"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="3dp"

                                android:text="@string/email_title"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/about_above_txt_size" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="3dp"
                                android:text="@string/email_tag"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/about_below_txt_size" />
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/RLWebsite"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/rectangle_white"
                        android:elevation="3dp">

                        <ImageView
                            android:id="@+id/imWebsiteLogo"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/circle"
                            android:padding="12dp"
                            android:src="@drawable/ic_website" />

                        <ImageView
                            android:id="@+id/imArrow5"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_arrow" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="10dp"
                            android:layout_toLeftOf="@+id/imArrow5"
                            android:layout_toRightOf="@+id/imWebsiteLogo"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="3dp"

                                android:text="@string/website_title"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/about_above_txt_size" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="3dp"

                                android:text="@string/website_tag"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/about_below_txt_size" />
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/RLPrivacyPolicy"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rectangle_white"
                        android:elevation="3dp">

                        <ImageView
                            android:id="@+id/imPrivacyPolicy"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/circle"
                            android:padding="12dp"
                            android:src="@drawable/ic_website" />

                        <ImageView
                            android:id="@+id/imArrow8"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_arrow" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="10dp"
                            android:layout_toLeftOf="@+id/imArrow8"
                            android:layout_toRightOf="@+id/imPrivacyPolicy"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="3dp"

                                android:gravity="center"
                                android:text="@string/privacy_title"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/about_above_txt_size" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="3dp"

                                android:gravity="center"
                                android:text="@string/privacy_tag"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/about_below_txt_size" />
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/RLdisclamer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rectangle_white"
                        android:elevation="3dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:elevation="3dp"
                                android:gravity="center"
                                android:text="Disclaimer"
                                android:textStyle="bold"
                                android:layout_gravity="center"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/about_above_txt_size" />


                            <TextView
                                android:id="@+id/distext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:elevation="3dp"
                                android:gravity="center"
                                android:layout_marginTop="10dp"
                                android:text="@string/disclemer_text"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/about_below_txt_size"
                                android:visibility="visible" />
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>


            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</layout>